# metafun

./: .gitignore  CMakeLists.txt  README.md
MetaFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake
MetaFunctions/src/: metafunctionsPCH.hpp  metafunctions_Test.cpp
MetaFunctions/src/MetaFuncUtilities/: InheritanceSearchStruct.hpp  VoidtCornerCases.hpp  apply_to_Index.hpp  enumeratePack.hpp  metaInheritanceSearch.hpp  metaLinearSearch.hpp  metafuncUtils.cpp  metafuncUtils.hpp
